  exception view handler, meaning it will have a chance to handle exceptions
  before they are turned into responses.

- The transaction manager will now retry retryable exceptions (such as a ZODB
  conflict error) if ``pyramid.attempts`` is configured to be more than the
  default of ``1``.  See the ``Retrying`` section of the documentation.

Backwards Incompatibilities
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Incompatible with Pyramid < 1.2a1.  Use ``pyramid_tm`` version 0.2 if
  you need compatibility with an older Pyramid installation.

- The ``default_commit_veto`` commit veto callback is no longer configured
  into the system by default.  Use ``tm.commit_veto =
  pyramid_tm.default_commit_veto`` in the deployment settings to add it.
  This is for parity with ``repoze.tm2``, which doesn't configure in a commit
  veto by default either.

- The ``default_commit_veto`` no longer checks for the presence of the
  ``X-Tm-Abort`` header when attempting to figure out whether the transaction
  should be aborted (although it still checks for the ``X-Tm`` header).  Use
  version 0.2 or a custom commit veto function if your application depends on
  the ``X-Tm-Abort`` header.

- A commit veto is now called with two arguments: ``request`` and
  ``response``.  The ``request`` is the webob request that caused the
  transaction manager to become active.  The ``response`` is the response
  returned by the Pyramid application.  This call signature is incompatible
  with older versions.  The call signature of a ``pyramid_tm`` 0.2 and older
  commit veto accepted three arguments: ``environ``, ``status``, and
  ``headers``.  If you're using a custom ``commit_veto`` function, you'll
  need to either convert your existing function to use the new calling
  convention or use a wrapper to make it compatible with the new calling
  convention.  Here's a simple wrapper function
  (``bwcompat_commit_veto_wrapper``) that will allow you to use your existing
  custom commit veto function::
